Implemented cache, rendering, map and world mgmt
The engine now has a resource cache, a network layer through which to
cache resources, a game loop manager and most of its primitive
initialization code complete.

--- a/client/default.html
+++ b/client/default.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="style/clientbase.css" />
 	</head>
 	<body>
-	<canvas id="viewport"></canvas>
+	<canvas id="viewport" width="849" height="507"></canvas>
 	<div id="debug-log"></div>
 	<script type="text/javascript" src="js/core/client.js"></script>
 	</body>
