No longer receiving dummy entity state; server is now responding with actual entity state of the current map.
Also includes a reorganization of assets into a common place, since
they're shared between client and server.

--- a/client/default.html
+++ b/client/default.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<title>Jelda Dev</title>
-		<link rel="stylesheet" type="text/css" href="style/clientbase.css" />
+		<link rel="stylesheet" type="text/css" href="client/style/clientbase.css" />
 		<script src="/socket.io/socket.io.js"></script>
-		<script type="text/javascript" src="js/core/client.js"></script>
+		<script type="text/javascript" src="/client/js/core/client.js"></script>
 	</head>
 	<body>
 	<canvas id="viewport" width="849" height="507"></canvas>
